# AirrLabs_DataEngineer_Assessment

./: README.md
AIRR_LAB_assessment/github_ETL_pipeline/: README.md  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
AIRR_LAB_assessment/github_ETL_pipeline/credential/: database_crd.json  github_crd.json
AIRR_LAB_assessment/github_ETL_pipeline/github_ETL_pipeline/: assets.py  definitions.py  heatmap.py
AIRR_LAB_assessment/github_ETL_pipeline/input/: input.json
AIRR_LAB_assessment/github_ETL_pipeline/sql/T1/SRI/TB/: T1_SRI_COMMITTER_TB.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T1/SRI/VR/: T1_SRI_COMMITTER_VR.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T1/STG/TB/: T1_STG_COMMITTER_TB.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T1/STG/TXF/: T1_COMMITTER_TXF.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T1/STG/VR/: T1_STG_COMMITTER_VR.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T2/TB/: T2_COMMITTER_TB.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T2/TXF/: T2_COMMITTER_TXF.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T2/VR/: T2_COMMITTER_VR.SQL
AIRR_LAB_assessment/github_ETL_pipeline/sql/T3/VR/: T3_HEATMAP.SQL  T3_LONGEST_STREAK_COMMITTER.SQL  T3_TOP_COMMITTER.SQL
